# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../base/config.gni")

config("shared_memory_config") {
  include_dirs = [
    "include",
    "../../base/include",
    "${OHOS_PROFILER_DIR}/interfaces/innerkits",
    "//utils/native/base/include",
  ]
}

ohos_shared_library("shared_memory") {
  sources = [
    "src/share_memory_allocator.cpp",
    "src/share_memory_block.cpp",
  ]
  public_configs = [
    ":shared_memory_config",
    "../../base:hiprofiler_test_config",
  ]

  public_deps = [
    "${OHOS_PROFILER_3RDPARTY_PROTOBUF_DIR}:protobuf",
    "${OHOS_PROFILER_3RDPARTY_PROTOBUF_DIR}:protobuf_lite",
    "//utils/native/base:utilsecurec",
  ]
  install_enable = true
  subsystem_name = "${OHOS_PROFILER_SUBSYS_NAME}"

  if (current_toolchain != host_toolchain) {
    defines = [ "HAVE_HILOG" ]
    if (build_l2) {
      external_deps = [ "shared_library:libhilog" ]
    } else {
      external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
    }
  }
}

ohos_static_library("shared_memory_static") {
  sources = [
    "src/share_memory_allocator.cpp",
    "src/share_memory_block.cpp",
  ]
  public_configs = [
    ":shared_memory_config",
    "../../base:hiprofiler_test_config",
  ]

  public_deps = [
    "${OHOS_PROFILER_3RDPARTY_PROTOBUF_DIR}:protobuf",
    "${OHOS_PROFILER_3RDPARTY_PROTOBUF_DIR}:protobuf_lite",
  ]

  if (current_toolchain != host_toolchain) {
    defines = [ "HAVE_HILOG" ]
    if (build_l2) {
      external_deps = [ "shared_library::libhilog" ]
    } else {
      external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
    }
  }
}
