# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module_output_path = "updater/updater_format_artition"

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("UpdaterFormatPartitionFuzzTest") {
  module_out_path = module_output_path

  include_dirs = [
    "//base/update/updater/utils/include",
    "//base/update/updater/interfaces/kits/include/",
    "//base/update/updater/services/include/package",
    "//base/update/updater/services/include/fs_manager",
    "//base/update/updater/services/package/pkg_manager",
    "//base/update/updater/services/include/log",
    "//base/update/updater/services",
    "//base/update/updater/services/ui",
    "//base/update/updater/services/include",
  ]

  deps = [
    "//base/update/updater/services/fs_manager:libfsmanager",
    "//base/update/updater/services/log:libupdaterlog",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "//base/update/updater/services/fs_manager/mount.cpp",
    "UpdaterFormatPartition_fuzzer.cpp",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":UpdaterFormatPartitionFuzzTest",
  ]
}
###############################################################################
