# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("../../ts.gni")
ohos_source_set("htrace_parser_src") {
  sources = [
    "../parser_base.cpp",
    "htrace_clock_detail_parser.cpp",
    "htrace_clock_detail_parser.h",
    "htrace_cpu_parser/htrace_cpu_detail_parser.cpp",
    "htrace_cpu_parser/htrace_cpu_detail_parser.h",
    "htrace_event_parser/htrace_event_parser.cpp",
    "htrace_event_parser/htrace_event_parser.h",
    "htrace_mem_parser.cpp",
    "htrace_mem_parser.h",
    "htrace_parser.cpp",
    "htrace_symbols_detail_parser.cpp",
    "htrace_symbols_detail_parser.h",
  ]
  include_dirs = [
    "htrace_event_parser",
    "htrace_cpu_parser",
    ".",
    "${OHOS_PROTO_GEN}",
    "../../include",
    "../../",
    "../",
    "../../trace_data",
    "../../cfg",
    "../../trace_streamer",
    "//third_party/protobuf/src",
    "../../filter",
    "../../base",
  ]
  if (enable_ts_utest) {
    cflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
    ]
    ldflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
      "--coverage",
    ]
  }
  public_deps = []
  deps = []
}
group("htrace_parser") {
  print(
      "--------------------------------start build htrace_parser ${OHOS_FTRACE_PROTO_DIR}:ftrace_data_cpp")
  deps = [
    ":htrace_parser_src",
    "${OHOS_FTRACE_PROTO_DIR}:ftrace_data_cpp",
    "${OHOS_MEMORY_PROTO_DIR}:memory_data_cpp",
    "${OHOS_SERVICE_PROTO_DIR}:proto_services_cpp",
    "//third_party/protobuf:protobuf",
    "//third_party/protobuf:protobuf_lite",
  ]
}
