# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("worker_init_config") {
  include_dirs = [ "//base/compileruntime/js_worker_module/jsapi/interfaces/innerkits/worker_core/include" ]
}

ohos_shared_library("worker_init") {
  include_dirs = [ "//base/compileruntime/js_worker_module/jsapi/interfaces/innerkits/worker_core/include" ]

  sources =
      [ "//base/compileruntime/js_worker_module/jsapi/worker/worker_init.cpp" ]

  deps = [
    "//foundation/ace/napi:ace_napi",
    "//foundation/ace/napi:ace_napi_quickjs",
  ]

  public_configs = [ ":worker_init_config" ]

  subsystem_name = "ccruntime"
  part_name = "jsapi_worker"
}

group("jsapi_init_packages") {
  deps = [ ":worker_init" ]
}
